Update: Restructure Admin control panel tables. Fix: table right align

--- a/client/src/app/modules/shared-module/table-component/table.component.scss
+++ b/client/src/app/modules/shared-module/table-component/table.component.scss
@@ -36,9 +36,11 @@ mat-cell {
 .narrow {
 	text-align: center;
 	max-width: 42px;
+	padding-right: 0;
 }
-.rightAlign {
+.rightAlign > * {
 	text-align: right;
+	width: 100%;
 }
 .rightAlignHeader {
 	text-align: center;
